--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "builddist": "vite build",
+    "copybuild": "xcopy dist C:\\Personal\\Projects\\fullstackopen_part3\\build\\ /E/H",
+    "build": "yarn builddist && yarn copybuild",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "json-server -p3001 --watch db.json"
