--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,8 +5,8 @@
   "author": "chris_lange_89@hotmail.com",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.0"
   },
@@ -14,6 +14,7 @@
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
+    "jest": "^29.6.1",
     "nodemon": "^3.0.1"
   },
   "scripts": {
