respond with a message if there are no blogs

--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -18,9 +18,9 @@
     "nodemon": "^3.0.1"
   },
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "lint": "eslint .",
-    "test": "jest --verbose"
+    "test": "NODE_ENV=test jest --verbose"
   }
 }
