--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -16,7 +16,8 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
