--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,6 +5,7 @@
   "author": "chris_lange_89@hotmail.com",
   "license": "MIT",
   "dependencies": {
+    "supertest": "^6.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -16,8 +17,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.2",
     "jest": "^29.6.2",
-    "nodemon": "^3.0.1",
-    "supertest": "^6.3.3"
+    "nodemon": "^3.0.1"
   },
   "scripts": {
     "start": "cross-env NODE_ENV=production node index.js",
