--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -5,11 +5,12 @@
   "author": "chris_lange_89@hotmail.com",
   "license": "MIT",
   "dependencies": {
-    "supertest": "^6.3.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.4.0"
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^7.4.0",
+    "supertest": "^6.3.3"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
